--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,11 @@ if(USE_MPI)
         endforeach(_TYPE C_LIBRARIES CXX_LIBRARIES EXTRA_LIBRARY)
 
         list(APPEND EXTERNAL_LIBRARIES ${MPI_LIBRARIES})
-        add_definitions(-DTIMEMORY_USE_MPI)
+        if(WIN32)
+            add_definitions(/DTIMEMORY_USE_MPI)
+        else(WIN32)
+            add_definitions(-DTIMEMORY_USE_MPI)
+        endif(WIN32)
         if(NOT MPIEXEC_EXECUTABLE AND MPIEXEC)
           set(MPIEXEC_EXECUTABLE ${MPIEXEC} CACHE FILEPATH "MPI executable")
         endif(NOT MPIEXEC_EXECUTABLE AND MPIEXEC)
@@ -150,11 +154,18 @@ if(NOT SUBPROJECT)
         add_subfeature(ENABLE_SANITIZE SANITIZE_TYPE "Sanitizer type")
         add(CMAKE_CXX_FLAGS "-fsanitize=${SANITIZE_TYPE}")
     endif(ENABLE_SANITIZE)
+    if(WIN32)
+        STRING(REPLACE " -" " /" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+    endif(WIN32)
     add_cxx_flags(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
 endif(NOT SUBPROJECT)
 
 if(TIMEMORY_EXCEPTIONS)
-    add_definitions(-DTIMEMORY_EXCEPTIONS)
+    if(WIN32)
+        add_definitions(/DTIMEMORY_EXCEPTIONS)
+    else(WIN32)
+        add_definitions(-DTIMEMORY_EXCEPTIONS)
+    endif(WIN32)
 endif()
 
 
@@ -212,7 +223,11 @@ if(SETUP_PY)
         "Installation prefix of python" FORCE)
 endif(SETUP_PY)
 
-add_definitions(-DNAME_TIM=${TIMEMORY_NAMESPACE})
+if(WIN32)
+    add_definitions(/DNAME_TIM=${TIMEMORY_NAMESPACE})
+else(WIN32)
+    add_definitions(-DNAME_TIM=${TIMEMORY_NAMESPACE})
+endif(WIN32)
 
 add_subdirectory(source)
 
