Header include modifications for Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,7 +110,11 @@ list(APPEND EXTERNAL_LIBRARIES ${CMAKE_THREAD_LIBS_INIT})
 include(GNUInstallDirs)
 add_option(TIMEMORY_EXCEPTIONS "Signal handler throws exceptions (default: exit)" OFF)
 if(NOT SUBPROJECT)
-    set(CMAKE_CXX_STANDARD 11 CACHE STRING "C++ STL standard")
+    if(WIN32)
+        set(CMAKE_CXX_STANDARD 14 CACHE STRING "C++ STL standard")
+    else(WIN32)
+        set(CMAKE_CXX_STANDARD 11 CACHE STRING "C++ STL standard")
+    endif(WIN32)
     add_feature(CMAKE_CXX_STANDARD "C++11 STL standard")
     add_option(CMAKE_CXX_STANDARD_REQUIRED "Require C++ standard" ON)
     add_option(CMAKE_CXX_EXTENSIONS "Build with CXX extensions (e.g. gnu++11)" OFF)
