Skip building examples on Windows + better checks for building MPI example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,8 +1,16 @@
 
-add_subdirectory(ex1)
-if(USE_MPI)
-    add_subdirectory(ex2)
-endif(USE_MPI)
+if(WIN32)
+    add_option(BUILD_EXAMPLES "Build the C++ examples" OFF)
+else(WIN32)
+    add_option(BUILD_EXAMPLES "Build the C++ examples" ON)
+endif(WIN32)
+
+if(BUILD_EXAMPLES)
+    add_subdirectory(ex1)
+    if(USE_MPI AND MPI_FOUND)
+        add_subdirectory(ex2)
+    endif(USE_MPI AND MPI_FOUND)
+endif(BUILD_EXAMPLES)
 
 execute_process(COMMAND ${CMAKE_COMMAND} -E copy_directory
     ${CMAKE_CURRENT_LIST_DIR} ${CMAKE_BINARY_DIR}/examples)
