--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -57,6 +57,6 @@ build_script:
 - set MSBuildLogger="C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 - cmake --build . --config %CONFIG% --target ALL_BUILD -- /m /v:m /logger:%MSBuildLogger%
 - cmake --build . --config %CONFIG% --target INSTALL -- /m /v:m /logger:%MSBuildLogger%
-- ctest -V
+- ctest -V --config %CONFIG% -- /m /v:m /logger:%MSBuildLogger%
 - python setup.py build install test
 
