AppVeyor testing modifications

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,7 +4,7 @@ image:
 - Visual Studio 2017
 - Visual Studio 2015
 
-test: off
+test: on
 
 build:
   parallel: true
@@ -57,6 +57,6 @@ build_script:
 - set MSBuildLogger="C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 - cmake --build . --config %CONFIG% --target ALL_BUILD -- /m /v:m /logger:%MSBuildLogger%
 - cmake --build . --config %CONFIG% --target INSTALL -- /m /v:m /logger:%MSBuildLogger%
-- ctest -V --config %CONFIG% -- /m /v:m /logger:%MSBuildLogger%
+- cmake --build . --config %CONFIG% --target RUN_TESTS -- /m /v:m /logger:%MSBuildLogger%
 - python setup.py build install test
 
