--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -47,7 +47,7 @@ install:
       $env:PYTHONHOME = "C:\Miniconda$env:CONDA"
       conda install -y -q pip
     }
-    pip install -U setuptools disttools mpi4py
+    pip install -U setuptools disttools mpi4py unittest2
 
 build_script:
 #- cmake -G "%CMAKE_GENERATOR%" -A "%CMAKE_ARCH%"
