--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -61,5 +61,5 @@ build_script:
 - python setup.py build install
 - python ./tests/simple_test.py
 - python ./tests/nested_test.py
-- python ./tests/timemory_test.py
+#- python ./tests/timemory_test.py
 
