Updates to setup.py and AppVeyor

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,10 +22,10 @@ environment:
     CPP: 14
     CONFIG: Release
 
-matrix:
-  exclude:
-    - image: Visual Studio 2015
-      platform: x86
+#matrix:
+#  exclude:
+#    - image: Visual Studio 2015
+#      platform: x86
 
 install:
 - ps: |
@@ -50,16 +50,7 @@ install:
     pip install -U setuptools disttools mpi4py unittest2
 
 build_script:
-#- cmake -G "%CMAKE_GENERATOR%" -A "%CMAKE_ARCH%"
-#    -DCMAKE_CXX_STANDARD=%CPP%
-#    -DCMAKE_SUPPRESS_REGENERATION=1
 - ls
-- DIR
-#- set MSBuildLogger="C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
-#- cmake --build . --config %CONFIG% --target ALL_BUILD -- /m /v:m /logger:%MSBuildLogger%
-#- cmake --build . --config %CONFIG% --target INSTALL -- /m /v:m /logger:%MSBuildLogger%
-- python setup.py build install
+- python ./setup.py build install
 - python ./tests/simple_test.py
 - python ./tests/nested_test.py
-#- python ./tests/timemory_test.py
-
