Space fixing for Windows MPI paths

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,13 +50,13 @@ add_option(USE_MPI "Enable MPI usage" ON)
 if(USE_MPI)
 
     if(WIN32)
-        if(EXISTS "C:\\Program Files (x86)\\Microsoft SDKs\\MPI")
-            list(APPEND CMAKE_PREFIX_PATH "C:\\Program Files (x86)\\Microsoft SDKs\\MPI")
-        endif(EXISTS "C:\\Program Files (x86)\\Microsoft SDKs\\MPI")
+        if(EXISTS "C:/Program\ Files\ (x86)/Microsoft\ SDKs/MPI")
+            list(APPEND CMAKE_PREFIX_PATH "C:/Program\ Files\ (x86)/Microsoft\ SDKs/MPI")
+        endif(EXISTS "C:/Program\ Files\ (x86)/Microsoft\ SDKs/MPI")
 
-        if(EXISTS "C:\\Program Files\\Microsoft SDKs\\MPI")
-            list(APPEND CMAKE_PREFIX_PATH "C:\\Program Files\\Microsoft SDKs\\MPI")
-        endif(EXISTS "C:\\Program Files\\Microsoft SDKs\\MPI")
+        if(EXISTS "C:/Program\ Files/Microsoft\ SDKs/MPI")
+            list(APPEND CMAKE_PREFIX_PATH "C:/Program\ Files/Microsoft\ SDKs/MPI")
+        endif(EXISTS "C:/Program\ Files/Microsoft\ SDKs/MPI")
     endif(WIN32)
 
     find_package(MPI)
