Disabled build_examples by default + removed requirement for CMake Python module since this is a fall-back

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ use_mpi=ON
 # throw exception in signal handler instead of exit
 timemory_exceptions=OFF
 # will always be OFF on Windows
-build_examples=ON
+build_examples=OFF
 # C++ standards: 11, 14, 17
 cxx_standard=11
 # set the MPI compilers
