--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -16,3 +16,4 @@ global-exclude *.git*
 global-exclude *__pycache__*
 # recursive excludes
 recursive-exclude pybind11/docs/.build *
+recursive-exclude examples/ex3 *
